// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: 01-linear-process.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "A single user task between a start event and an end event.",
  "accTitle": "Simple Linear Process",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "e1",
    },
  ],
  "lanes": [],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Start",
      "laneId": undefined,
      "poolId": undefined,
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Submit Request",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Done",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [],
}
`;

exports[`snapshot: 02-gateway-decision.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "A manager reviews a request and either approves or rejects it via an exclusive gateway.",
  "accTitle": "Purchase Request Approval",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "g1",
    },
    {
      "id": "f3",
      "kind": "conditional",
      "label": "yes",
      "source": "g1",
      "target": "t2",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "no",
      "source": "g1",
      "target": "t3",
    },
    {
      "id": "f5",
      "kind": "sequence",
      "source": "t2",
      "target": "e1",
    },
    {
      "id": "f6",
      "kind": "default",
      "source": "t3",
      "target": "e2",
    },
  ],
  "lanes": [],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Request Raised",
      "laneId": undefined,
      "poolId": undefined,
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Review Request",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Approved?",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Issue Purchase Order",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Notify Rejection",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Order Issued",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "Rejected",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [],
}
`;

exports[`snapshot: 03-pool-lane-collaboration.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Buyer and supplier pools exchange a purchase order via cross-pool message flow.",
  "accTitle": "Purchase Order Collaboration",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "t2",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "t2",
      "target": "g1",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "no",
      "source": "g1",
      "target": "e2",
    },
    {
      "id": "f5",
      "kind": "sequence",
      "source": "t3",
      "target": "t4",
    },
    {
      "id": "f6",
      "kind": "sequence",
      "source": "t4",
      "target": "e1",
    },
    {
      "id": "f7",
      "kind": "message",
      "source": "g1",
      "target": "t3",
    },
  ],
  "lanes": [
    {
      "id": "req",
      "label": "Requester",
      "poolId": "buyer",
    },
    {
      "id": "mgr",
      "label": "Manager",
      "poolId": "buyer",
    },
  ],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Need Identified",
      "laneId": "req",
      "poolId": "buyer",
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Submit PO Request",
      "laneId": "req",
      "poolId": "buyer",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Review Request",
      "laneId": "mgr",
      "poolId": "buyer",
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Approved?",
      "laneId": "mgr",
      "poolId": "buyer",
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "Rejected",
      "laneId": "mgr",
      "poolId": "buyer",
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Receive PO",
      "laneId": undefined,
      "poolId": "supplier",
      "position": undefined,
      "subtype": "receive",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Acknowledge PO",
      "laneId": undefined,
      "poolId": "supplier",
      "position": undefined,
      "subtype": undefined,
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "PO Acknowledged",
      "laneId": undefined,
      "poolId": "supplier",
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [
    {
      "id": "buyer",
      "label": "Buyer",
      "laneIds": [
        "req",
        "mgr",
      ],
    },
    {
      "id": "supplier",
      "label": "Supplier",
      "laneIds": [],
    },
  ],
}
`;

exports[`snapshot: 04-multi-event.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Customer places an order. The system validates it, checks inventory, and either fulfills or cancels.",
  "accTitle": "Order Fulfillment Process",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "t1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "t1",
      "target": "g1",
    },
    {
      "id": "f3",
      "kind": "conditional",
      "label": "valid",
      "source": "g1",
      "target": "t2",
    },
    {
      "id": "f4",
      "kind": "conditional",
      "label": "invalid",
      "source": "g1",
      "target": "t5",
    },
    {
      "id": "f5",
      "kind": "sequence",
      "source": "t2",
      "target": "g2",
    },
    {
      "id": "f6",
      "kind": "conditional",
      "label": "yes",
      "source": "g2",
      "target": "t3",
    },
    {
      "id": "f7",
      "kind": "conditional",
      "label": "no",
      "source": "g2",
      "target": "t4",
    },
    {
      "id": "f8",
      "kind": "sequence",
      "source": "t3",
      "target": "e1",
    },
    {
      "id": "f9",
      "kind": "default",
      "source": "t4",
      "target": "e2",
    },
    {
      "id": "f10",
      "kind": "sequence",
      "source": "t5",
      "target": "e2",
    },
  ],
  "lanes": [],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Order Placed",
      "laneId": undefined,
      "poolId": undefined,
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Validate Order",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Valid?",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Check Inventory",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "g2",
      "kind": "gateway",
      "label": "In Stock?",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "xor",
    },
    {
      "id": "t3",
      "kind": "task",
      "label": "Pick and Pack",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t4",
      "kind": "task",
      "label": "Notify Customer",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "t5",
      "kind": "task",
      "label": "Cancel Order",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "user",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Order Shipped",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
    {
      "id": "e2",
      "kind": "event",
      "label": "Order Cancelled",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [],
}
`;

exports[`snapshot: 05-parallel-split.mmd > parses to a stable DB state 1`] = `
{
  "accDescription": "Work is split in parallel across two service tasks and then joined before completion.",
  "accTitle": "Parallel Task Processing",
  "flows": [
    {
      "id": "f1",
      "kind": "sequence",
      "source": "s1",
      "target": "g1",
    },
    {
      "id": "f2",
      "kind": "sequence",
      "source": "g1",
      "target": "t1",
    },
    {
      "id": "f3",
      "kind": "sequence",
      "source": "g1",
      "target": "t2",
    },
    {
      "id": "f4",
      "kind": "sequence",
      "source": "t1",
      "target": "g2",
    },
    {
      "id": "f5",
      "kind": "sequence",
      "source": "t2",
      "target": "g2",
    },
    {
      "id": "f6",
      "kind": "sequence",
      "source": "g2",
      "target": "e1",
    },
  ],
  "lanes": [],
  "nodes": [
    {
      "id": "s1",
      "kind": "event",
      "label": "Trigger",
      "laneId": undefined,
      "poolId": undefined,
      "position": "start",
      "subtype": undefined,
    },
    {
      "id": "g1",
      "kind": "gateway",
      "label": "Split",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "and",
    },
    {
      "id": "t1",
      "kind": "task",
      "label": "Run Background Job",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "t2",
      "kind": "task",
      "label": "Send Notification",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "service",
    },
    {
      "id": "g2",
      "kind": "gateway",
      "label": "Join",
      "laneId": undefined,
      "poolId": undefined,
      "position": undefined,
      "subtype": "and",
    },
    {
      "id": "e1",
      "kind": "event",
      "label": "Complete",
      "laneId": undefined,
      "poolId": undefined,
      "position": "end",
      "subtype": undefined,
    },
  ],
  "pools": [],
}
`;
